@@ -56,10 +56,7 @@ class Codes final : public internal::Singleton<const Codes> // const Singleton
     /**
      * \brief Default constructor
      */
-    Codes() {} // = default; // clang++ spits the error below if defaulted:
-    //    error:
-    //    default initialization of an object of const type 'const qpp::Codes'
-    //    requires a user-provided default constructor
+    Codes() = default;
 
     /**
      * \brief Default destructor
